tests/ui/derive-arbitrary/empty_enum/expected
error: Cannot derive `Arbitrary` for `Empty`
|\
| #[derive(kani::Arbitrary)]\
|          ^^^^^^^^^^^^^^^
note: `Empty` has zero variants and cannot be instantiated
|\
| enum Empty {}\
|      ^^^^^

Error: "Failed to compile crate."
